--- a/style.css
+++ b/style.css
@@ -2,20 +2,19 @@
 
 body { 
 	font-family: 'Kiwi Maru', serif;
-	background: url(img/background.png) no-repeat;
-	background-size: cover;
+	background color: white;
+	background-size: 100%;
 	background-position: center;
-	min-height: 1000px;
-	margin-top: 40px;
+	max-height: 500px;
+	margin-top: 60px;
 	text-align: center;
 
  }
 
-* {margin: 0px;
-   padding: 0px }
+
 
  #nav { 
- 	background: pink;
+ 	background: blue;
  	width: 100%;
  	height: 62px;
  	line-height: 60px;
@@ -24,19 +23,24 @@ body {
 
  #nav h1 { 
  	float: left;
- 	font-family: 'Abril Fatface', cursive;
+ 	font-family: 'Kiwi Maru', serif;
  	color: black;
+ 	margin-left: 80px;
+
+
  }
 
  #nav h1 a { 
+
  	text-decoration: none;
  	color: black;
- 	margin-left: 25px;
+ 	margin-left: 20px;
 
   }
 
  #nav ul { 
  	float: right;
+ 	margin-right: 80px;
 
   }
 
@@ -52,17 +56,21 @@ body {
  	font-family: 'Kiwi Maru', serif;
  	text-decoration: none;
  	color: black;
- 	padding: 70px;
+ 	padding: 30px;
 
  }
 
  #nav ul li :hover { 
- 	background: pink;
+ 	background: #017143;
  	transition: all ease-in-out 0.40s;
+ 	padding: 50px;
  }
 
 
+#nav a:hover {
+	color: aqua;
 
+}
 
  }
 #anna { 
@@ -73,20 +81,276 @@ body {
 
 #anna1 { 
 	background: pink; 
-	height: 5px;
+	height: 70px;
 
 }
 
 #anna2 { 
-	background: url(img/background.png) no-repeat;
+	background: white;
 	width: 100%;
-	height: 1000px;
+	height: 500px;
 
  }
 
+.slider{
+	width: 500px;
+	height: 300px;
+	border-radius: 10px;
+	overflow: hidden;
+	margin-right: 150px;
+	margin-top: 120px;
+
+}
+
+.sliders{
+	width: 200%;
+	height: 1000px;
+	display: flex;
+}
+.sliders input{
+	display: none;
+}
+.slider{
+	width: 28.25%;
+	height:500px ;
+	transition: 1s;
+}
+.slide img{
+	width: 400px;
+	height: 500px;
+}
+
+.navigation-manual{
+	position: absolute;
+	width: 150px;
+	margin-top: -465px;
+	display: flex;
+	justify-content: center;
+	margin-left: 130px;
+
+}
+.manual-btn{
+	border: 2px solid aqua;
+	padding: 5px;
+	border-radius: 10px;
+	cursor: pointer;
+	transition: 1s;
+
+}
+.manual-btn:not(:last-child){
+	margin-right: 30px;
+
+}
+.manual-btn:hover{
+	background: aqua;
+
+}
+
+#radio1:checked ~ .first{
+	margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+	margin-left: -53%;
+}
+
+#radio3:checked ~ .first{
+	margin-left: -108%;
+}
+
+.slide img.b1{ 
+  width:300px;
+  
+ 
+  }
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+.content{
+	position: relative;
+	width: 100%;
+	display: flex;
+	justify-content:space-between;
+	align-items: center;
+}
+
+.content .textBox{
+	position: relative;
+	max-width: 600px;
+
+}
+
+.content .textBox h2{
+	color: #333;
+	font-size: 4em;
+	font-size: 1.4em;
+	font-weight: 500;
+	font-family: 'Kiwi Maru', serif;
+	padding-left: 90px;
+	padding-top: 50px;
+
+
+} 
+.content .textBox h2 span{
+	color: #017143;
+	font-size: 3em;
+	font-weight: 900;
+	font-family: 'Kiwi Maru', serif;
+	padding-left: 100px;
+
+}
+
+
+
+.content .textBox p{
+	color: #333;
+	font-family: 'Kiwi Maru', serif;
+	padding-left: 60px;
+	margin-left: 30px;
+	
+}
+
+
+.content .textBox a{
+	display: inline-block;
+	margin-top: 10px;
+	margin-left: 90px;
+	padding: 10px 10px;
+	background: #017143;
+	color: white;
+	font-weight: 500;
+	letter-spacing: 1px;
+	text-decoration: none;
+	font-family: 'Kiwi Maru', serif;
+	padding-left: 10px;
+
+
+}
+.content .textBox a:hover {
+
+	color: aqua;
+}
+
+
+
+
+.imgbox .b1{
+  width:600px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 80px;
+  margin-top: 100px;
+ 
+
+}
+
+
+*{ margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+
+}
+
+footer{ 
+
+	position: absolute;
+	bottom:-250px;
+	left: 0;
+	right: 0;
+	background: pink;
+	height: 100px;
+	width: 100vw;
+	font-family: 'Kiwi Maru', serif;
+    padding-top: 2px;
+    color: black;
+}
+
+.footer-content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+}
+.footer-content h3{ 
+	font-size: 1.3rem;
+	font-weight: 500;
+	text-transform: capitalize;
+	line-height: 2rem;
+}
+.footer-content p{
+	max-width: 200px;
+	margin: 2px auto;
+	line-height: 50px;
+	font-size: 9px;
+
+}
+.socials {
+	list-style: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0.25rem 0 0.5rem 0;
+
+}
+
+.socials li{
+	margin: 0 10px;
+	
+
+}
+.socials a{
+	text-decoration: none;
+	color: black;
+
+}
+.socials a i{
+	font-size: 1.1rem;
+	transition: color .4s ease;
+
+}
+
+.socials a:hover i{
+	color: aqua;
+
+}
+
+.footer-bottom{
+	background: pink;
+	width: 100vw;
+	padding: 3px 0;
+	text-align: center;
+
+
+}
+
+.footer-bottom p{
+	font-size: 10px;
+	word-spacing: 2px;
+	text-transform: capitalize;
+}
+
+.footer-bottom span{
+	text-transform: uppercase;
+	opacity: .4;
+	font-weight: 200;
+
+}
+
+
+
+}
 
 
 
