--- a/style.css
+++ b/style.css
@@ -12,9 +12,14 @@ body {
  }
 
 
+.img1{
+	width: 3%;
+  height: auto;
+}
+
 
  #nav { 
- 	background: blue;
+ 	background: pink;
  	width: 100%;
  	height: 62px;
  	line-height: 60px;
@@ -25,7 +30,7 @@ body {
  	float: left;
  	font-family: 'Kiwi Maru', serif;
  	color: black;
- 	margin-left: 80px;
+ 	margin-left: 10px;
 
 
  }
